--- a/angular-amplify-cognito/src/app/components/login/login.component.html
+++ b/angular-amplify-cognito/src/app/components/login/login.component.html
@@ -2,7 +2,7 @@
 
       <mat-card-content>
 
-        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <form [formGroup]="loginForm" (ngSubmit)="handleLogin()">
 
           <h2>Log In</h2>
 
